--- a/.env.testnet
+++ b/.env.testnet
@@ -2,3 +2,5 @@ tokenAddress="0xaECbF4842dbD56F5FCaaABA6421a3C77eE75C814"
 explorerBaseUrl="https://testnet.bscscan.com"
 pancakeBaseUrl="https://pancake.kiemtienonline360.com"
 githubUsername="HyperDeFiProtocol"
+twitterUsername="hyperdefiorg"
+telegramUsername="HyperDeFi"
