--- a/.env.testnet
+++ b/.env.testnet
@@ -4,3 +4,4 @@ pancakeBaseUrl="https://pancake.kiemtienonline360.com"
 githubUsername="HyperDeFiProtocol"
 twitterUsername="hyperdefiorg"
 telegramUsername="HyperDeFi"
+telegramChannel="HyperDeFiCH"
