--- a/.env.testnet
+++ b/.env.testnet
@@ -1,1 +1,7 @@
 tokenAddress="0x2773E7f4c02B97ED6aaf9447F2914c363E448762"
+explorerBaseUrl="https://testnet.bscscan.com"
+pancakeBaseUrl="https://pancake.kiemtienonline360.com"
+githubUsername="HyperDeFiProtocol"
+twitterUsername="hyperdefiorg"
+telegramUsername="HyperDeFi"
+telegramChannel="hyperdefiprotocol"
