update: connect wallet

--- a/.env.testnet
+++ b/.env.testnet
@@ -1,4 +1,5 @@
 tokenAddress="0xe686F8ceFD7C8A2B5a4D9a129EA7Ad43581c19F7"
+web3RpcUrl="https://data-seed-prebsc-1-s1.binance.org:8545/"
 explorerBaseUrl="https://testnet.bscscan.com"
 pancakeBaseUrl="https://pancake.kiemtienonline360.com"
 githubUsername="HyperDeFiProtocol"
