--- a/.env.testnet
+++ b/.env.testnet
@@ -1,7 +1,10 @@
+mode="ALPHA TEST MODE"
 tokenAddress="0xe686F8ceFD7C8A2B5a4D9a129EA7Ad43581c19F7"
 web3RpcUrl="https://data-seed-prebsc-1-s1.binance.org:8545/"
+chainName="BSC Chain Testnet"
 explorerBaseUrl="https://testnet.bscscan.com"
 pancakeBaseUrl="https://pancake.kiemtienonline360.com"
+
 githubUsername="HyperDeFiProtocol"
 twitterUsername="hyperdefiorg"
 telegramUsername="HyperDeFi"
