--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@metamask/detect-provider": "^1.2.0",
+    "@metamask/onboarding": "^1.0.1",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.9.1",
+    "detect-browser": "^5.2.0",
     "moment": "^2.29.1",
     "nuxt": "^2.15.3",
     "vue-fragment": "^1.5.2",
+    "vue-qr": "^2.5.0",
     "web3": "^1.3.6"
   },
   "devDependencies": {
