--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,8 +53,8 @@ jobs:
 
       - name: Deploy for `alpha.hyperdefi.org` 🚀🚀
         run: |
-          - echo "alpha.hyperdefi.org" > ./dist/CNAME
-          - cp README.alpha.md > ./dist/README.md
+          echo "alpha.hyperdefi.org" > ./dist/CNAME
+          cp README.alpha.md > ./dist/README.md
 
       - name: Deploy for Alpha Test 🚀🚀🚀
         uses: JamesIves/github-pages-deploy-action@4.1.4
@@ -67,8 +67,8 @@ jobs:
 
       - name: Deploy for `testnet.hyperdefi.org` 🚀🚀
         run: |
-          - echo "testnet.hyperdefi.org" > ./dist/CNAME
-          - cp README.testnet.md > ./dist/README.md
+          echo "testnet.hyperdefi.org" > ./dist/CNAME
+          cp README.testnet.md > ./dist/README.md
 
       - name: Deploy for BSC Chain Testnet 🚀🚀🚀
         uses: JamesIves/github-pages-deploy-action@4.1.4
