--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Deploy for `alpha.hyperdefi.org` 🚀🚀
         run: |
           echo "alpha.hyperdefi.org" > ./dist/CNAME
-          cp README.alpha.md > ./dist/README.md
+          cp README.alpha.md ./dist/README.md
 
       - name: Deploy for Alpha Test 🚀🚀🚀
         uses: JamesIves/github-pages-deploy-action@4.1.4
@@ -68,7 +68,7 @@ jobs:
       - name: Deploy for `testnet.hyperdefi.org` 🚀🚀
         run: |
           echo "testnet.hyperdefi.org" > ./dist/CNAME
-          cp README.testnet.md > ./dist/README.md
+          cp README.testnet.md ./dist/README.md
 
       - name: Deploy for BSC Chain Testnet 🚀🚀🚀
         uses: JamesIves/github-pages-deploy-action@4.1.4
