--- a/.env.testnet
+++ b/.env.testnet
@@ -9,3 +9,5 @@ githubUsername="HyperDeFiProtocol"
 twitterUsername="hyperdefiorg"
 telegramUsername="HyperDeFi"
 telegramChannel="hyperdefiprotocol"
+
+googleAnalyticsId="G-KPTKP89M1K"
