--- a/.github/workflows/alpha.yml
+++ b/.github/workflows/alpha.yml
@@ -49,10 +49,8 @@ jobs:
       - name: Nuxt generate 🚀
         run: yarn generate
 
-      - name: CNAME and README 🚀🚀
-        run: |
-          echo "alpha.hyperdefi.org" > ./dist/CNAME
-          cp README.alpha.md ./dist/README.md
+      - name: CNAME 🚀🚀
+        run: echo "alpha.hyperdefi.org" > ./dist/CNAME
 
       - name: Deploy 🚀🚀🚀
         uses: JamesIves/github-pages-deploy-action@4.1.4
@@ -60,5 +58,5 @@ jobs:
           token: ${{ secrets.CI_TOKEN }}
           repository-name: HyperDeFiProtocol/alpha
           commit-message: "${{ github.repository }}@${{ github.sha }}"
-          branch: alpha
+          branch: gh-pages
           folder: dist
