--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tailwindcss/typography": "^0.4.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "glob-parent": "^6.0.0",
     "node-sass": "^6.0.1",
     "postcss": "^8.2.8",
     "prettier": "^2.3.2",
