--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@metamask/detect-provider": "^1.2.0",
     "@metamask/onboarding": "^1.0.1",
     "@nuxtjs/pwa": "^3.3.5",
+    "bignumber.js": "^9.0.1",
     "core-js": "^3.15.2",
     "detect-browser": "^5.2.0",
     "moment": "^2.29.1",
