--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@metamask/onboarding": "^1.0.1",
     "@nuxtjs/pwa": "^3.3.5",
     "bignumber.js": "^9.0.1",
+    "bn.js": "^5.2.0",
     "core-js": "^3.16.2",
     "detect-browser": "^5.2.0",
+    "dexie": "^3.0.3",
     "moment": "^2.29.1",
     "nuxt": "^2.15.8",
     "nuxt-i18n": "^6.28.1",
