--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bignumber.js": "^9.0.1",
     "bn.js": "^5.2.0",
     "core-js": "^3.17.2",
+    "crypto-js": "^4.1.1",
     "detect-browser": "^5.2.0",
     "dexie": "^3.0.3",
     "moment": "^2.29.1",
