--- a/.env.testnet
+++ b/.env.testnet
@@ -12,6 +12,7 @@ githubUsername="HyperDeFiProtocol"
 twitterUsername="hyperdefiorg"
 telegramUsername="HyperDeFi"
 telegramChannel="hyperdefiprotocol"
+discordInvite="X4pkxBx3bf"
 
 googleAnalyticsId="G-KPTKP89M1K"
 
