--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/pwa": "^3.3.5",
     "bignumber.js": "^9.0.1",
     "bn.js": "^5.2.0",
+    "clipboard-copy": "^4.0.1",
     "core-js": "^3.18.3",
     "crypto-js": "^4.1.1",
     "detect-browser": "^5.2.1",
