update: beta test

--- a/.env.testnet
+++ b/.env.testnet
@@ -1,19 +1,12 @@
 baseUrl="https://hyperdefi.org"
 
-mode="ALPHA TEST MODE"
+mode="BETA TEST MODE"
 tokenAddress="0xA224106d8442049D3C4687638825179F1f596abc"
 web3RpcUrl="https://data-seed-prebsc-1-s1.binance.org:8545/"
 chainName="BSC Chain Testnet"
 chainId=97
 explorerBaseUrl="https://testnet.bscscan.com"
 pancakeBaseUrl="https://pancake.kiemtienonline360.com"
-
-twitterUsername="hyperdefiorg"
-discordInvite="X4pkxBx3bf"
-redditUsername="r/HyperDeFiProtocol"
-telegramUsername="HyperDeFi"
-telegramChannel="hyperdefiprotocol"
-githubUsername="HyperDeFiProtocol"
 
 googleAnalyticsId="G-KPTKP89M1K"
 
