--- a/.github/workflows/mainnet.yml
+++ b/.github/workflows/mainnet.yml
@@ -4,9 +4,9 @@ on:
   push:
     branches:
       - main
-#  pull_request:
-#    branches:
-#      - main
+#  release:
+#    types:
+#      - create
 
 jobs:
   ci:
