--- a/.github/workflows/alpha.yml
+++ b/.github/workflows/alpha.yml
@@ -3,10 +3,7 @@ name: Alpha Test
 on:
   push:
     branches:
-      - main
-#  pull_request:
-#    branches:
-#      - main
+      - develop
 
 jobs:
   ci:
@@ -20,6 +17,9 @@ jobs:
     steps:
       - name: Checkout 🛎
         uses: actions/checkout@master
+
+      - name: Branch - develop
+        run: git checkout develop
 
       - name: Setup node env 🏗
         uses: actions/setup-node@v2
