--- a/.github/workflows/mainnet.yml
+++ b/.github/workflows/mainnet.yml
@@ -1,12 +1,12 @@
 name: Mainnet
 
 on:
-  push:
-    branches:
-      - main
-#  release:
-#    types:
-#      - create
+#  push:
+#    branches:
+#      - main
+  release:
+    types:
+      - created
 
 jobs:
   ci:
