--- a/.github/workflows/testnet.yml
+++ b/.github/workflows/testnet.yml
@@ -1,12 +1,12 @@
 name: Testnet
 
 on:
-  push:
-    branches:
-      - main
-#  pull_request:
+#  push:
 #    branches:
 #      - main
+  release:
+    types:
+      - created
 
 jobs:
   ci:
