--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "crypto-js": "^4.1.1",
     "detect-browser": "^5.2.1",
     "dexie": "^3.0.3",
+    "dotenv": "^10.0.0",
+    "jsbi": "^4.1.0",
     "moment": "^2.29.1",
     "nuxt": "^2.15.8",
     "nuxt-i18n": "^6.28.1",
