on: workflow_dispatch

--- a/.github/workflows/testnet.yml
+++ b/.github/workflows/testnet.yml
@@ -1,12 +1,14 @@
 name: Testnet
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
 #  release:
 #    types:
 #      - created
+
 
 jobs:
   ci:
