fix: price display

--- a/.env.testnet
+++ b/.env.testnet
@@ -1,4 +1,4 @@
-mode="ALPHA TEST MODE"
+mode="BETA TEST MODE"
 tokenAddress="0xfc2225b442aC74219B96948F754aF9f8b43a240f"
 idoAddress="0xc1DDebea82478b8EE1b901089Df051D21436BBfF"
 web3RpcUrl="https://data-seed-prebsc-1-s1.binance.org:8545/"
