--- a/.env.mainnet
+++ b/.env.mainnet
@@ -1,6 +1,10 @@
 mode="production"
 tokenAddress="0x99999999f678F56beF0Da5EB96F4c1300Cf8D69a"
 idoAddress="0x00000000E00A2E5B43460D40BcdF82E6e054CD3D"
+web3RpcUrl="https://bsc-dataseed.binance.org/"
+chainName="BSC Chain"
+chainId="56"
+
 
 googleAnalyticsId="G-KPTKP89M1K"
 
